--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height: 1000vh;
     width: 1000%;
     background-image:url(sky.jpg);
-    background-size: cover;
+   /* background-size: cover;*/
     background-position: center;
     position: relative;
     overflow-x: hidden;
